core/grammar.js
    source_file: ($) => $.statements,
    statements: ($) => repeat1($.statement),
    // Note: Line comments must be handled separately due to tree-sitter limitations.
    // Using choice() for line_comment as an extra causes parsing issues.
    statement: ($) =>
      choice(
        $.print_statement,
        $.command_set,
        $.command_write,
        $.command_do,
        $.command_zwrite,
        $.command_for,
        $.command_while,
        $.command_kill,
        $.command_lock,
        $.command_read,
        $.command_open,
        $.command_close,
        $.command_use,
        $.command_new,
        $.command_if,
        $.command_else,
        $.command_throw,
        $.command_trycatch,
        $.command_job,
        $.command_break,
        $.command_merge,
        $.command_quit,
        $.command_goto,
        $.command_return,
        $.command_halt_or_hang,
        $.command_dowhile,
        $.command_continue,
        $.command_tcommit,
        $.command_trollback,
        $.command_tstart,
        $.command_view,
        $.command_xecute,
        $.command_zbreak,
        $.command_zkill,
        $.command_zn,
        $.command_zsu,
        $.command_ztrap,
        $.command_zz,
        $.embedded_html,
        $.embedded_xml,
        $.embedded_sql,
        $.embedded_js,
        $.pound_dim,
        $.pound_define,
        $.pound_def1arg,
        $.pound_if,
        $.pound_ifdef,
        $.pound_ifndef,
        $.pound_import,
        $.pound_include,
        $.macro,
        $.tag,
        $.tag_with_params,
        $.procedure,
      ),

    keyword_set: (_) => /[sS]([eE][tT])?/,
    keyword_write: (_) => /[wW]([rR][iI][tT][eE])?/,
    keyword_do: (_) => /[dD]([oO])?/,
    keyword_close: (_) => /Close/i,
    keyword_break: (_) => /B(REAK)?/i,
    keyword_goto: (_) => /[Gg]([oO][tT][oO])?/,
    keyword_zbreak: (_) => /ZB(REAK)?/i,
    dotted_statement: ($) =>
       seq(
         // this is from the external scanner, and it means that it was
         // at the start of a line and there were dots matching the dotted statement
        $._bol,
        repeat('.'), // in the whitespace case, I don't want to consume the . in the scanner, so they would appear here
        $.statement,
      ),

    command_set: ($) =>
      build_command_rule_argumentful(
        $,
        $.keyword_set,
        repeat_with_commas($.set_argument),
      ),
    set_argument: ($) =>
        choice(
            seq(
                choice($.set_target, $.set_target_list),
                '=',
                optional($._xecute_arg_invalid), $.expression,
            ),
            $.indirection,
        ),

    set_target: ($) =>
        seq(
            optional($._xecute_arg_invalid),
            choice(
                $.glvn,
                $.instance_variable,
                $.oref_set_target,
                $.system_defined_function, // For things like, set $LB(a, b) = 3
                $.system_defined_variable,
                $.sql_field_reference,
                $.indirection,
            ),
        ),
    command_write: ($) =>
      prec.right(
        choice(
          build_command_rule_argumentless($, $.keyword_write),
          seq(
          $.keyword_write,
          optional($.post_conditional),
          choice($._immediate_single_whitespace_followed_by_non_whitespace, $._zw_block),
          repeat_with_commas($.write_argument),
        ),
        ),
      ),
    write_argument: ($) => choice($.write_device_control, $.expression),
    command_do: ($) =>
      choice(
          prec.right(seq($.keyword_do, repeat1($.dotted_statement))),
          prec.right(seq($.keyword_do, $._argumentless_command_end, repeat1(alias($.statement, $.do_statement_after)), repeat1($.dotted_statement))),
        // DO with parameters
        build_command_rule_argumentful(
          $,
          $.keyword_do,
          repeat_with_commas($.do_parameter),
        ),
      ),
    do_parameter: ($) =>
        seq(
            choice(
                $.routine_tag_call,
                $.class_method_call,
                $.instance_method_call,
                $.doable_dollar_functions,
                $.superclass_method_call,
            ),
            optional($.post_conditional),
        ),


    routine_tag_call: ($) =>
      seq(
        $.line_ref,
        optional($.method_args),
      ),


    command_close: ($) =>
      build_command_rule_argumentful(
        $,
        $.keyword_close,
        repeat_with_commas($.close_argument),
      ),
    close_parameters: ($) =>
      choice(
        seq(
         alias('(', $.bracket),
        optional(
          seq(
            optional($.close_parameter_option_value),
            repeat(
              seq(
                ':',
                optional($.close_parameter_option_value),
              ),
            ),
          ),
        ),
         alias(')', $.bracket),
        ),
        $.close_parameter_option_value,
      ),
    close_argument: ($) =>
      seq($.device, optional(seq(token.immediate(':'), $.close_parameters))),
    // "D", "K", ("R":newname or /REN=newname or /RENAME=newman)
    close_rename: (_) =>
        choice(
        seq('"R"', ':'),
        seq(choice('/REN=', '/RENAME=')),
      ),
    close_parameter_option_value: ($) =>
      choice(
        '"K"',
        '"D"',
        seq($.close_rename, $.device),
        seq($.open_keyword_delete, optional(seq(token.immediate('='), $.expression))),
      ),

    command_if: ($) =>
      // The `IF` command is tricky, there are 3 versions:
      // * Block style:   If <cond> { ... } [Else/ElseIf ...]
      // * Old with arg:  If <cond> <commands...>
      // * Old no arg:    If  <commands...>
      // NOTE: `IF` doesn't allow post_conditional in any form
      choice(
        // Block style IF

          seq(
              $.keyword_if,
              $._immediate_single_whitespace_followed_by_non_whitespace,
              repeat_with_commas($.expression),
              optional($._termination),
              '{',
              repeat($.statement),
              '}',
              repeat($.elseif_block),
              optional($.else_block),
          ),
          seq(
              $.keyword_if,
              $._argumentless_loop,
              '{',
              repeat($.statement),
              '}',
              repeat($.elseif_block),
              optional($.else_block),
          ),
          seq(
              $.keyword_if,
              $._argumentless_command_end,
              repeat1($.statement),
              $._termination,
          ),
          seq(
              $.keyword_if,
              $._termination,
          ),
          seq(
              $.keyword_if,
              $._immediate_single_whitespace_followed_by_non_whitespace,
              repeat_with_commas($.expression),
              repeat($.statement),
              $._termination,
          ),
      ),
    command_break: ($) =>
      choice(
          seq(
              $.keyword_break,
              optional($.post_conditional),
              choice(
                  $._argumentless_command_end,
                  $._termination,
              ),
          ),
          seq(
              $.keyword_break,
              optional($.post_conditional),
              $._immediate_single_whitespace_followed_by_non_whitespace,
              repeat_with_commas($.break_argument),
          ),
      ),
    break_argument: ($) =>
      choice( $.string_literal, alias(/[0145]/, $.numeric_literal)),
    command_goto: ($) =>
      prec.right(
        choice(
          build_command_rule_argumentless($, $.keyword_goto),
          build_command_rule_argumentful(
            $,
            $.keyword_goto,
            repeat_with_commas($.goto_argument),
          ),
        ),
      ),
    goto_argument: ($) => seq(
      $.line_ref,
      optional($.post_conditional),
    ),

    byref_arg: ($) =>
      seq(
        '.',
        $.lvn,
      ),

    command_zbreak: ($) =>
      choice(
        build_command_rule_argumentless($, $.keyword_zbreak),
        seq(
          $.keyword_zbreak,
          optional($.post_conditional),
          $.zbreak_arguments,
        ),
      ),
     device: ($) =>
      seq(
        $.expression,
        optional(
              repeat(
              seq(
                token.immediate('/'),
                $.expression,
              ),
            ),
        ),
      ),
    post_conditional: ($) =>
      seq($._post_conditional_id, token.immediate(':'), alias($.expression_post_cond, $.expression)),
    ...post_conditional_rules,
  },
});
