core/test/corpus/do-special-case.txt
=====
Do Statements Nested
=====
	i x d  d arr(.y,.z) GOTO filename 
	. set x = 2
	. w hi
---

(source_file
  (statements
    (statement
      (command_if
        (keyword_old_if_refactor)
        (expression
          (expr_atom
            (lvn
              (objectscript_identifier))))
        (statement
          (command_do
            (keyword_do)
            (do_statement_after
              (command_do
                (keyword_do)
                (do_parameter
                  (routine_tag_call
                    (line_ref
                      (objectscript_identifier))
                    (method_args
                      (bracket)
                      (method_arg
                        (byref_arg
                          (lvn
                            (objectscript_identifier))))
                      (method_arg
                        (byref_arg
                          (lvn
                            (objectscript_identifier))))
                      (bracket))))))
            (do_statement_after
              (command_goto
                (keyword_goto)
                (goto_argument
                  (line_ref
                    (objectscript_identifier)))))
            (dotted_statement
              (bol)
              (statement
                (command_set
                  (keyword_set)
                  (set_argument
                    (set_target
                      (glvn
                        (lvn
                          (objectscript_identifier))))
                    (expression
                      (expr_atom
                        (numeric_literal)))))))
            (dotted_statement
              (bol)
              (statement
                (command_write
                  (keyword_write)
                  (write_argument
                    (expression
                      (expr_atom
                        (lvn
                          (objectscript_identifier))))))))))))))
